--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "itsgoingd/clockwork": "^5.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "mailchimp/marketing": "^3.0",
         "spatie/yaml-front-matter": "^2.0"
     },
     "require-dev": {
